# cursor-tg

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
src/cursor_tg_connector/: __init__.py  __main__.py  config.py  cursor_api_client.py  cursor_api_models.py  domain_types.py  github_api_client.py  github_api_models.py  main.py  persistence_db.py  persistence_state_repo.py  services_agent_service.py  services_create_agent_service.py  services_followup_service.py  services_notification.py  services_polling_service.py  services_pull_request_service.py  telegram_bot_app.py  telegram_bot_callbacks.py  telegram_bot_commands.py  telegram_bot_common.py  telegram_bot_constants.py  telegram_bot_messages.py  telegram_threads.py  utils_formatting.py  utils_logging.py
tests/: conftest.py  test_agent_service.py  test_config.py  test_create_agent_service.py  test_cursor_api_client.py  test_followup_service.py  test_github_api_client.py  test_polling_service.py  test_telegram_authorization.py  test_telegram_bot_callbacks.py  test_telegram_bot_commands.py
